--- a/app/globals.css
+++ b/app/globals.css
@@ -23,4 +23,17 @@ font-family: "Jomolhari" , sans-serif;
 font-family: "Roboto" , sans-serif;
 }
 
+@keyframes slideIn {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+.slide-in-underline {
+  animation: slideIn 0.5s ease-out;
+}
+
 
